NWNX Functions 1.8.7 (release) Added dynamic allocation support to GetDescription (spacer is not required anymore) fixes #1

--- a/functions/Makefile.in
+++ b/functions/Makefile.in
@@ -18,7 +18,7 @@ NWNXBASE=$(NWNXDIR)/NWNXBase.o $(NWNXDIR)/gline.o
 
 all: nwnx_functions.so
 
-nwnx_functions.so: C2DA.o CNWSScriptVarTable.o FunctionHooks.o NWNXFunction.o plugin-functions.o
+nwnx_functions.so: C2DA.o CNWSScriptVarTable.o CExoLinkedList.o CItemRepository.o FunctionHooks.o NWNXFunction.o plugin-functions.o
 	$(CXX) $(FLAGS) -o $@ $^ $(LIBS) $(DEFS)
 
 plugin-t: plugin-t.o $(NWNXBASE)
