--- a/plugins/events/Makefile.in
+++ b/plugins/events/Makefile.in
@@ -11,7 +11,7 @@ DEFS = @DEFS@
 # if NWNXDIR is not specified, configure should
 # probe (.. ../linnwnx2) and die if not found.
 # NWNXDIR = @NWNXDIR@
-NWNXDIR = ..
+NWNXDIR = ../..
 
 # CFLAGS = -g -O2 -I$(NWNXDIR)
 # CXXFLAGS= -g -O2 $(CFLAGS)
