--- a/plugins/fixes/Makefile.in
+++ b/plugins/fixes/Makefile.in
@@ -8,7 +8,7 @@ DEFS = @DEFS@
 # if NWNXDIR is not specified, configure should
 # probe (.. ../linnwnx2) and die if not found.
 # NWNXDIR = @NWNXDIR@
-NWNXDIR = ..
+NWNXDIR = ../..
 
 # CFLAGS = @CFLAGS@ -I$(NWNXDIR)
 # CXXFLAGS= @CXXFLAGS@ $(CFLAGS)
