--- a/plugins/chat/Makefile
+++ b/plugins/chat/Makefile
@@ -1,38 +1,17 @@
-CXX = g++
-LIBS = 
-# -lpthread 
-# -lz
-# -lpcap -L/usr/lib/mysql -lmysqlclient
-FLAGS = -w -fPIC -shared -W -Wall -Llib/
-DEFS = -DHAVE_CONFIG_H
-
-# TODO: snarf from configure somehow
-# the user should be able to specify NWNXDIR
-# if NWNXDIR is not specified, configure should
-# probe (.. ../linnwnx2) and die if not found.
-# NWNXDIR = @NWNXDIR@
-NWNXDIR = ../..
-
-# CFLAGS = -g -O2 -I$(NWNXDIR)
-# CXXFLAGS= -g -O2 $(CFLAGS)
-CPPFLAGS = -mtune=i386 -I$(NWNXDIR)
-
-NWNXBASE=$(NWNXDIR)/NWNXBase.o $(NWNXDIR)/gline.o
-# $(NWNXDIR)/db/data.o $(NWNXDIR)/db/dbmysql.o 
+NWNXDIR  = ../..
+CPPFLAGS = $(PLUGIN_CPPFLAGS) -I$(NWNXDIR)
+LFLAGS   = $(PLUGIN_LFLAGS)
 
 all: nwnx_chat.so
 
-nwnx_chat.so: HookChat.o NWNXChat.o plugin-chat.o $(NWNXBASE)
-	$(CXX) $(FLAGS) -o $@ $^ $(LIBS) $(DEFS) 
-
-#plugin-t: plugin-t.o $(NWNXBASE)
-#	$(CXX) -o $@ $(CXXFLAGS) $^ -ldl
+nwnx_chat.so: HookChat.o NWNXChat.o plugin-chat.o
+	$(CXX) $(LFLAGS) -o $@ $^ $(LIBS)
 
 clean:
-	/bin/rm -f *.o *.so
+	/bin/rm -f *.o *.so *~
 
 distclean: clean
 	/bin/rm -f Makefile
 
-install: all
-	mkdir -p /home/dumbo/test/ ; install nwnx_speech.so /home/jeroen/applications/nwn//
+install: nwnx_chat.so
+	mkdir -p /usr/local/share/nwn/ ; install nwnx_chat.so /usr/local/share/nwn/
