--- a/plugins/events/Makefile.in
+++ b/plugins/events/Makefile.in
@@ -1,35 +1,17 @@
-CXX = @CXX@
-LIBS = @LIBS@
-# -lpthread 
-# -lz
-# -lpcap -L/usr/lib/mysql -lmysqlclient
-FLAGS = -w -fPIC -shared -W -Wall @LDFLAGS@
-DEFS = @DEFS@
-
-# TODO: snarf from configure somehow
-# the user should be able to specify NWNXDIR
-# if NWNXDIR is not specified, configure should
-# probe (.. ../linnwnx2) and die if not found.
-# NWNXDIR = @NWNXDIR@
-NWNXDIR = ../..
-
-# CFLAGS = -g -O2 -I$(NWNXDIR)
-# CXXFLAGS= -g -O2 $(CFLAGS)
-CPPFLAGS = @CPPFLAGS@ -I$(NWNXDIR)
-
-NWNXBASE=$(NWNXDIR)/NWNXBase.o $(NWNXDIR)/gline.o
-# $(NWNXDIR)/db/data.o $(NWNXDIR)/db/dbmysql.o 
+NWNXDIR  = ../..
+CPPFLAGS = $(PLUGIN_CPPFLAGS) -I$(NWNXDIR)
+LFLAGS   = $(PLUGIN_LFLAGS)
 
 all: nwnx_events.so
 
-nwnx_events.so: HookFunc.o NWNXEvents.o CExoLinkedList.o CExoLocString.o plugin-events.o $(NWNXBASE)
-	$(CXX) $(FLAGS) -o $@ $^ $(LIBS) $(DEFS) 
-
-#plugin-t: plugin-t.o $(NWNXBASE)
-#	$(CXX) -o $@ $(CXXFLAGS) $^ -ldl
+nwnx_events.so: HookFunc.o NWNXEvents.o CExoLinkedList.o CExoLocString.o plugin-events.o
+	$(CXX) $(LFLAGS) -o $@ $^ $(LIBS)
 
 clean:
-	/bin/rm -f *.o *.so
+	/bin/rm -f *.o *.so *~
 
 distclean: clean
 	/bin/rm -f Makefile
+
+install: nwnx_events.so
+	mkdir -p @prefix@/ ; install nwnx_events.so @prefix@/
