--- a/plugins/fixes/Makefile.in
+++ b/plugins/fixes/Makefile.in
@@ -1,34 +1,17 @@
-CXX = @CXX@
-LIBS = @LIBS@
-FLAGS = -w -fPIC -shared -W -Wall @LDFLAGS@
-DEFS = @DEFS@
-
-# TODO: snarf from configure somehow
-# the user should be able to specify NWNXDIR
-# if NWNXDIR is not specified, configure should
-# probe (.. ../linnwnx2) and die if not found.
-# NWNXDIR = @NWNXDIR@
-NWNXDIR = ../..
-
-# CFLAGS = @CFLAGS@ -I$(NWNXDIR)
-# CXXFLAGS= @CXXFLAGS@ $(CFLAGS)
-CPPFLAGS = @CPPFLAGS@ -I$(NWNXDIR)
-
-NWNXBASE=$(NWNXDIR)/NWNXBase.o $(NWNXDIR)/gline.o 
+NWNXDIR  = ../..
+CPPFLAGS = $(PLUGIN_CPPFLAGS) -I$(NWNXDIR)
+LFLAGS   = $(PLUGIN_LFLAGS)
 
 all: nwnx_fixes.so
 
 nwnx_fixes.so: FixesHooks.o NWNXFixes.o plugin-fixes.o
-	$(CXX) $(FLAGS) -o $@ $^ $(LIBS) $(DEFS)
-
-plugin-t: plugin-t.o $(NWNXBASE)
-	$(CXX) -o $@ $(CXXFLAGS) $^ -ldl
+	$(CXX) $(LFLAGS) -o $@ $^ $(LIBS)
 
 clean:
-	/bin/rm -f *.o *.so *~ plugin-t
+	/bin/rm -f *.o *.so *~
 
 distclean: clean
 	/bin/rm -f Makefile
 
-install: all
+install: nwnx_fixes.so
 	mkdir -p @prefix@/ ; install nwnx_fixes.so @prefix@/
