change exalt plugins to using Makefile.in move sneak/death/crit immunity split to defenses plugin from weapons add offhand crit multiplier fix to weapons plugin

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,8 +10,10 @@ CPPFLAGS = @CPPFLAGS@ -Iinclude $(DEFS)
 SUBDIRS = \
     plugins/chat       \
     plugins/db         \
+    plugins/defenses   \
     plugins/events     \
     plugins/fixes      \
+    plugins/funcs      \
     plugins/functions  \
     plugins/hashset    \
     plugins/mnx        \
