properly integrate LDFLAGS into exalt-based plugins

--- a/plugins/weapons/Makefile.in
+++ b/plugins/weapons/Makefile.in
@@ -33,7 +33,7 @@ LIBS	 = -L/usr/local/lib -lm -lz
 DEFS	 = -D_REENTRANT -D_THREAD_SAFE
 CFLAGS   = @CFLAGS@ -Wall -Werror $(DEFS) $(INCS)
 CPPFLAGS = @CPPFLAGS@ -Wall -Werror $(DEFS) $(INCS)
-LFLAGS   = $(DEBUGS) $(OPTS) -w -fPIC -shared -rdynamic
+LFLAGS   = @LDFLAGS@ -w -fPIC -shared -rdynamic
 
 OFILES  = \
     common/c_GetIsUnarmedWeapon.o                \
