--- a/plugins/funcs/Makefile.in
+++ b/plugins/funcs/Makefile.in
@@ -34,7 +34,7 @@ LIBS	 = -L/usr/local/lib -lm -lz
 DEFS	 = -D_REENTRANT -D_THREAD_SAFE
 CFLAGS   = @CFLAGS@ -Wall -Werror $(DEFS) $(INCS)
 CPPFLAGS = @CPPFLAGS@ -Wall -Werror $(DEFS) $(INCS)
-LFLAGS   = $(DEBUGS) $(OPTS) -w -fPIC -shared -rdynamic
+LFLAGS   = @LDFLAGS@ -w -fPIC -shared -rdynamic
 
 OFILES  = \
     funcs/ability/f_GetAbilityIncreaseByLevel.o  \
