--- a/plugins/defenses/Makefile.in
+++ b/plugins/defenses/Makefile.in
@@ -38,9 +38,11 @@ LFLAGS   = @LDFLAGS@ -w -fPIC -shared -rdynamic
 OFILES  = \
     funcs/f_GetACByType.o                        \
     funcs/f_GetACVersus.o                        \
+    funcs/f_GetAllSpellImmunities.o              \
     funcs/f_GetDefenseOption.o                   \
     funcs/f_GetEffectDamageReduction.o           \
     funcs/f_GetEffectDamageResistance.o          \
+    funcs/f_GetHasSpellImmunity.o                \
     funcs/f_GetTrueDamageImmunity.o              \
     funcs/f_IntToObject.o                        \
     funcs/f_SetDefenseOption.o                   \
