Added example ODBC2 section to nwnx2.ini

--- a/nwnx2.ini
+++ b/nwnx2.ini
@@ -2,10 +2,31 @@
 disablenwnxinit=n     #Set to "y" to not enforce the NWNX!INIT requirement
 
 [Database]
+# The old database driver (plugins/db)
 server=               #name of the database server
 user=                 #username to access db
 pass=                 #password for username
 db=                   #database to connect to
+
+[ODBC2]
+# The new database driver (plugins/odmbc) - recommended
+
+; Use these five settings for MySQL connections
+source=mysql
+server=localhost
+user=root
+pass=
+db=
+
+; SQLite settings
+;source=sqlite
+;file=sqlite.db
+
+; Set hookscorco to false if you want to disable hooking of
+; StoreCampaignObject and RetrieveCampaignObject entirely
+
+hookscorco = true
+
 
 [Debug]
 debuglevel=0          #Set to 1 or higher to output successively
