add FileLink and FileSymlink

--- a/plugins/system/Makefile.in
+++ b/plugins/system/Makefile.in
@@ -38,8 +38,10 @@ LFLAGS   = @LDFLAGS@ -w -fPIC -shared -rdynamic
 OFILES  = \
     funcs/f_DirList.o                            \
     funcs/f_FileCopy.o                           \
+    funcs/f_FileLink.o                           \
     funcs/f_FileDelete.o                         \
     funcs/f_FileRename.o                         \
+    funcs/f_FileSymlink.o                        \
     funcs/f_GetProcessCPUUsage.o                 \
     funcs/f_GetProcessMemoryUsage.o              \
     funcs/f_GetSystemTime.o                      \
