add SetPlaceableAppearance() add DumpLocalVariables() utility function add EVENT_TYPE_ALL to events and delete some strings set on mod for efficiency add some fields to placeable struct

--- a/plugins/funcs/Makefile.in
+++ b/plugins/funcs/Makefile.in
@@ -107,6 +107,7 @@ OFILES  = \
     funcs/other/f_SetSoundset.o                  \
     funcs/other/f_SetTag.o                       \
     funcs/other/f_SetTrapCreator.o               \
+    funcs/placeable/f_SetPlaceableAppearance.o   \
     funcs/quickbar/f_GetQuickBarSlot.o           \
     funcs/quickbar/f_SetQuickBarSlot.o           \
     funcs/sabil/f_AddSpecialAbility.o            \
